--- a/playbook.yml
+++ b/playbook.yml
@@ -1,4 +1,3 @@
-- hosts: 127.0.0.1
 - hosts: localhost
   connection: local
   sudo: yes
@@ -91,7 +90,25 @@
         replace=" #Deny from All"
       notify:
         - restart httpd
+        
+    #
+    # larabel
+    #
+    - name: composer install
+      shell: curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin creates=/usr/local/bin/composer
+      tags: composer
+ 
+    - name: composer rename
+      command: mv /usr/local/bin/composer.phar /usr/local/bin/composer creates=/usr/local/bin/composer
+      tags: composer
+ 
+    - name: composer add permission
+      file: path=/usr/local/bin/composer mode=a+x state=file
+      tags: composer
 
+    - name: laravel install
+      command: composer global require "laravel/installer"
+      tags: laravel
   handlers:
     - name: restart httpd
       service: name=httpd state=restarted
